added media queries and also updated css

--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
             <p>Sign In</p>
         </section>
     </nav>
+    <main class="banner-container">
+        <div id="imagecontainer">
+            <img src="./banner.jpg" alt="three students" id="bannerimage">
+        </div>
+        <div class="banner-text-container">
+            <div id="banner-text">
+                <h2 id="banner-tittle">Learn something new everyday </h2>
+                <p id="banner-tittle-p"> Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <button id="start-button" class="button" type="button">Start Here</button>
+            </div>
+
+        </div>
+    </main>
 
 
 </body>
